YH-1922: Fixed: Incorrect size module and text spacing in the “Mentoring - Pricing” section

--- a/src/widgets/Mentor/PricingSection/ui/TariffCard/TariffCard.module.css
+++ b/src/widgets/Mentor/PricingSection/ui/TariffCard/TariffCard.module.css
@@ -1,6 +1,7 @@
 .card {
 	padding: 20px;
 	width: calc(33% - 10px);
+	height: 528px;
 	border-radius: 20px;
 }
 
@@ -25,6 +26,7 @@
 
 .button {
 	margin-top: 40px;
+	padding: 0;
 	font-weight: 500;
 	font-size: 18px;
 }
@@ -32,6 +34,7 @@
 @media (width < 1280px) {
 	.card {
 		width: calc(50% - 10px);
+		height: auto;
 	}
 
 	.title {
@@ -45,6 +48,7 @@
 
 @media (width < 768px) {
 	.card {
+		padding: 10px;
 		width: 100%;
 		min-height: unset;
 	}
